chore: Remove PrimaryAlignment to prevent crashing

--- a/reference/ToDo/ToDo/Views/Dialogs/SettingsFlyout.xaml
+++ b/reference/ToDo/ToDo/Views/Dialogs/SettingsFlyout.xaml
@@ -34,7 +34,8 @@
 			</VisualStateManager.VisualStateGroups>
 
 			<utu:AutoLayout>
-				<utu:AutoLayout utu:AutoLayout.PrimaryAlignment="Stretch">
+				<!--Removed utu:AutoLayout.PrimaryAlignment="Stretch" to prevent crashing-->
+				<utu:AutoLayout>
 					<utu:NavigationBar x:Uid="SettingsFlyout_NavigationBar"
 									   Content="Settings"
 									   uen:Navigation.Request="-"
