--- a/reference/ToDo/src/ToDo/Views/HomePage.xaml
+++ b/reference/ToDo/src/ToDo/Views/HomePage.xaml
@@ -76,7 +76,7 @@
 				<Grid Grid.Row="0"
 					  Padding="16,8"
 					  ColumnSpacing="8"
-					  ColumnDefinitions="*,AUto">
+					  ColumnDefinitions="*,Auto">
 
 					<Button Grid.Column="0"
 							uen:Navigation.Request="!Settings"
