--- a/WindowingSamples/WindowingSamples/MainPage.xaml
+++ b/WindowingSamples/WindowingSamples/MainPage.xaml
@@ -14,17 +14,16 @@
       </Style>
     </StackPanel.Resources>
     <Grid>
-
       <Image Source="ms-appx:///Assets/unologo.png" Width="80" />
     </Grid>
     <TextBlock Text="Windowing Samples" HorizontalAlignment="Center" Style="{ThemeResource TitleTextBlockStyle}" />
-    <Button Click="{x:Bind BasicWindow}">
+    <Button Click="{x:Bind BasicWindowSample}">
       <StackPanel Orientation="Horizontal" Spacing="8">
         <FontIcon HorizontalAlignment="Left" FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE15B;" />
         <TextBlock Text="Basic window" HorizontalAlignment="Center" />
       </StackPanel>
     </Button>
-    <Button Click="{x:Bind CustomWindow}">
+    <Button Click="{x:Bind CustomWindowSample}">
       <StackPanel Orientation="Horizontal" Spacing="8">
         <FontIcon FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE161;" />
         <TextBlock Text="Custom window" />
