chore: Full screen mode sample

--- a/UI/WindowingSamples/WindowingSamples/FullScreenModeWindow.xaml
+++ b/UI/WindowingSamples/WindowingSamples/FullScreenModeWindow.xaml
@@ -17,7 +17,7 @@
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Spacing="8">
       <TextBlock HorizontalAlignment="Center" Text="This is a full screen window" FontSize="20" />
-      <Button HorizontalAlignment="Center" Click="{x:Bind Close}">Close me</Button>
+      <Button HorizontalAlignment="Center" Click="CloseClick">Close me</Button>
     </StackPanel>
   </Grid>
 </Window>
