--- a/UI/WindowingSamples/WindowingSamples/MinimizeMaximizeWindow.xaml
+++ b/UI/WindowingSamples/WindowingSamples/MinimizeMaximizeWindow.xaml
@@ -16,9 +16,9 @@
     <controls:WindowTitleControl Text="Minimize/maximize" Glyph="&#xEE49;" />
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Spacing="8">
-      <Button Click="{x:Bind Maximize}" HorizontalAlignment="Stretch" Content="Maximize" />
-      <Button Click="{x:Bind Restore}" HorizontalAlignment="Stretch" Content="Restore"/>
-      <Button Click="{x:Bind Minimize}" HorizontalAlignment="Stretch" Content="Minimize"/>
+      <Button Click="MaximizeClick" HorizontalAlignment="Stretch" Content="Maximize" />
+      <Button Click="RestoreClick" HorizontalAlignment="Stretch" Content="Restore"/>
+      <Button Click="MinimizeClick" HorizontalAlignment="Stretch" Content="Minimize"/>
     </StackPanel>
   </Grid>
 </Window>
