chore: Further improvements

--- a/UI/WindowingSamples/WindowingSamples/MainPage.xaml
+++ b/UI/WindowingSamples/WindowingSamples/MainPage.xaml
@@ -29,12 +29,12 @@
         <TextBlock Text="Custom window" />
       </StackPanel>
     </Button>
-    <Button Click="{x:Bind WindowTitleSample}">
+    <!--<Button Click="{x:Bind WindowTitleSample}">
       <StackPanel Orientation="Horizontal" Spacing="8">
         <FontIcon FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE737;" />
         <TextBlock Text="Window title" />
       </StackPanel>
-    </Button>
+    </Button>-->
     <Button Click="{x:Bind FullScreenModeSample}">
       <StackPanel Orientation="Horizontal" Spacing="8">
         <FontIcon FontFamily="{ThemeResource SymbolThemeFontFamily}" Glyph="&#xE740;" />
