--- a/UI/WindowingSamples/WindowingSamples/WindowTitleWindow.xaml
+++ b/UI/WindowingSamples/WindowingSamples/WindowTitleWindow.xaml
@@ -13,7 +13,7 @@
       <RowDefinition Height="Auto" />
       <RowDefinition Height="*" />
     </Grid.RowDefinitions>
-    <controls:WindowTitleControl Text="Window title" Glyph="&#xE7B5;" />
+    <controls:WindowTitleControl Text="Window title" Glyph="&#xE737;" />
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Spacing="8">
       <TextBlock HorizontalAlignment="Center" Text="Type to change the window title" FontSize="20" />
