chore: Use light theme by default

--- a/UI/WindowingSamples/WindowingSamples/App.xaml
+++ b/UI/WindowingSamples/WindowingSamples/App.xaml
@@ -1,8 +1,9 @@
-<Application x:Class="WindowingSamples.App"
+﻿<Application x:Class="WindowingSamples.App"
        xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
        xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
        xmlns:wasm="http://platform.uno/wasm"
        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+       RequestedTheme="Light"
        mc:Ignorable="wasm">
 
   <Application.Resources>
