--- a/UI/WindowingSamples/WindowingSamples/CustomWindow.xaml
+++ b/UI/WindowingSamples/WindowingSamples/CustomWindow.xaml
@@ -16,7 +16,7 @@
     <controls:WindowTitleControl Text="Custom window" Glyph="&#xE161;" />
     
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Spacing="8">
-      <TextBlock x:Name="WindowText" HorizontalAlignment="Center" Text="This is custom window" FontSize="40" />
+      <TextBlock Foreground="White" x:Name="WindowText" HorizontalAlignment="Center" Text="This is custom window" FontSize="40" />
       <Button HorizontalAlignment="Center" Click="CloseClick">Close</Button>
     </StackPanel>
   </Grid>
