--- a/UI/WindowingSamples/WindowingSamples/WindowTitleWindow.xaml
+++ b/UI/WindowingSamples/WindowingSamples/WindowTitleWindow.xaml
@@ -17,7 +17,7 @@
 
     <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Grid.Row="1" Spacing="8">
       <TextBlock HorizontalAlignment="Center" Text="Type to change the window title" FontSize="20" />
-      <TextBox Width="320" Grid.Row="1" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{x:Bind WindowTitle, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
+      <TextBox Width="320" Grid.Row="1" FontSize="24" HorizontalAlignment="Center" VerticalAlignment="Center" Text="{x:Bind Title, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" />
     </StackPanel>
   </Grid>
 </Window>
