chore: control panel

--- a/UI/PhotoViewer/InteractionControls/ZoomContentControl.xaml
+++ b/UI/PhotoViewer/InteractionControls/ZoomContentControl.xaml
@@ -3,6 +3,15 @@
 	xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
 	xmlns:ctl="using:InteractionControls">
 
+	<Style x:Key="ZoomButtonStyle" TargetType="Button">
+		<Setter Property="MinHeight" Value="30" />
+		<Setter Property="MinWidth" Value="30" />
+		<Setter Property="CornerRadius" Value="15" />
+		<Setter Property="BorderThickness" Value="0" />
+		<Setter Property="HorizontalContentAlignment" Value="Center" />
+		<Setter Property="VerticalContentAlignment" Value="Center" />
+	</Style>
+
 	<Style x:Key="DefaultZoomContentControlStyle" TargetType="ctl:ZoomContentControl">
 		<Setter Property="Template">
 			<Setter.Value>
@@ -65,6 +74,48 @@
 							ViewportSize="{TemplateBinding ViewPortWidth}"
 							Visibility="{TemplateBinding IsActive}"
 							Value="{TemplateBinding HorizontalScrollValue}" />
+						<StackPanel
+							Height="50"
+							Margin="30"
+							Padding="10,0"
+							HorizontalAlignment="Center"
+							VerticalAlignment="Bottom"
+							Background="LightGray"
+							CornerRadius="20"
+							Opacity="0.8"
+							Orientation="Horizontal"
+							Spacing="10">
+
+							<TextBlock
+								Width="70"
+								VerticalAlignment="Center"
+								Opacity="1"
+								Text="{TemplateBinding ZoomString}"
+								TextAlignment="Center" />
+
+							<Button
+								VerticalAlignment="Center"
+								Command="{TemplateBinding ZoomIn}"
+								Content="+"
+								Opacity="1"
+								Style="{StaticResource ZoomButtonStyle}" />
+
+							<Button
+								VerticalAlignment="Center"
+								Command="{TemplateBinding ZoomOut}"
+								Content="-"
+								Opacity="1"
+								Style="{StaticResource ZoomButtonStyle}" />
+
+							<Button
+								Width="100"
+								VerticalAlignment="Center"
+								Command="{TemplateBinding ResetZoom}"
+								Content="Redefine"
+								Opacity="1"
+								Style="{StaticResource ZoomButtonStyle}" />
+
+						</StackPanel>
 					</Grid>
 				</ControlTemplate>
 			</Setter.Value>
