--- a/UI/BindingSources/CSHARP/Binding/App.xaml
+++ b/UI/BindingSources/CSHARP/Binding/App.xaml
@@ -1,4 +1,3 @@
 <Application x:Class="Binding.App"
-       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
-</Application>
+			 xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+			 xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" />
