fix: Build fixes

--- a/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/ChartControl.xaml
+++ b/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/ChartControl.xaml
@@ -8,7 +8,7 @@
             xmlns:local="clr-namespace:DevExpressApp.MauiControls"
             HorizontalOptions="Fill"
             VerticalOptions="Fill">
-  <Label Text="ChartView (Search and apply TODO comments)" />
+  <!--<Label Text="ChartView (Search and apply TODO comments)" />-->
   <dxc:ChartView>
 		<dxc:ChartView.BindingContext>
 			<local:ViewModel />
