--- a/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/DataGridControl.xaml
+++ b/UI/MauiEmbedding/DevExpressApp/DevExpressApp.MauiControls/DataGridControl.xaml
@@ -8,7 +8,7 @@
             xmlns:local="clr-namespace:DevExpressApp.MauiControls"
             HorizontalOptions="Fill"
             VerticalOptions="Fill">
-  <Label Text="DataGridView (Search and apply TODO comments)" />
+  <!--<Label Text="DataGridView (Search and apply TODO comments)" />-->
   <dxg:DataGridView ItemsSource="{Binding Employees}"
                     EditorShowMode="DoubleTap"
                     AllowDragDropRows="True">
