--- a/reference/Counter/XAML-MVUX/Counter/MainPage.xaml
+++ b/reference/Counter/XAML-MVUX/Counter/MainPage.xaml
@@ -19,14 +19,14 @@
 			Margin="12"
 			HorizontalAlignment="Center"
 			PlaceholderText="Step Size"
-			Text="{Binding Step, Mode=TwoWay}"
+			Text="{Binding Countable.Step, Mode=TwoWay}"
 			TextAlignment="Center" />
 
 		<TextBlock
 			Margin="12"
 			HorizontalAlignment="Center"
 			TextAlignment="Center">
-			<Run Text="Counter: " /><Run Text="{Binding Count}" />
+			<Run Text="Counter: " /><Run Text="{Binding Countable.Count}" />
 		</TextBlock>
 
 		<Button
